@@ -40,7 +40,6 @@ Priority Issues (Fix These First)
 - check the end-of-block usage checks and error messages
   - check each of the SDLC modes
   - review non-block tests
-- for an out parameter, it should not be 'not declared' error on unstructured script
 - universal typeless loses its properties when a custom type or subtype
   is derived from it
 - tests for ada 95 and strings package csv_field, csv_replace, field, is_slashed_date, is_typo_of, mktemp, split, to_base64, to_escaped, to_hexadecimal_digits, to_json
